# jira-extended-mcp-server

./: .gitignore  .mcp.json  LICENSE  README.ko.md  README.md  pyproject.toml
src/jira_extended_mcp/: __init__.py  adf.py  client.py  server.py
